@@ -1,0 +1,6 @@
+./.installed.cfg
+./bin
+./develop-eggs
+./eggs
+./parts
+*.egg-info
